2008-08-06  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/Makefile.am,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp:
	  Add Ide reference, MD.Version control needs it.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Diff/Diff.cs: Add missing accessor.

2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/gtk-gui/objects.xml,
	  MonoDevelop.VersionControl.Subversion/Makefile.am,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.mdp,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionRepository.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs:
	  Add support for locking/unlocking, and for on-demand unlocking
	  (RequestFileEdit event).

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionRepository.cs:
	  Moved serialization engine to MonoDevelop.Core. Use new syntax for
	  specifying attribute scope.

2008-07-06  Andrés G. Aragoneses <aaragoneses@novell.com> 

	Implement feature in bug#394434: "Revert [to] revision".
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  New P/Invokes for merge command.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionRepository.cs:
	  Overriding implementations for RevertRevision and RevertToRevision.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Connection between the P/Invoke library (for the merge command) and
	  the Revert[To]Revision methods.