@@ -1,5 +1,15 @@
 2008-08-21  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* MonoDevelop.VersionControl.Views/StatusView.cs,
+	  MonoDevelop.VersionControl/Repository.cs,
+	  MonoDevelop.VersionControl/VersionInfo.cs: Properly show the remote
+	  status in the status view. Include remote additions and removals.
+	  Show diff between working copy and repo when remote status is
+	  requested. All this fixes bug #395284 - SVN plugin: Show Remote
+	  Status does not work.
+
+2008-08-21  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs,
 	  gtk-gui/generated.cs,
 	  gtk-gui/MonoDevelop.VersionControl.Dialogs.EditRepositoryDialog.cs,
